Minor Fixes to Text and Spacing

--- a/src/App.css
+++ b/src/App.css
@@ -84,6 +84,7 @@ button:focus:not(:focus-visible) {
   text-align: center;
   margin-bottom:0;
   padding-bottom: 3rem;
+  font-size: 1.5rem;
 }
 
 @media (min-width: 720px) {
